# infinity-database

./: LICENSE  README.md  pyproject.toml
configs/: pipeline.yaml
src/dataflow/: __init__.py  cli.py
src/dataflow/core/: artifact.py  config.py  operator.py  pipeline.py  registry.py
src/dataflow/ir/: schema.py
src/dataflow/operators/: augment_llm.py  build_sqlite.py  cluster.py  compile_ddl.py  consolidate_schema.py  deduplicate.py  embed.py  ingest_db.py  ingest_files.py  quality_check.py
src/dataflow/providers/: embedding.py  llm.py
src/dataflow/qc_rules/: basic.py  semantic.py
src/dataflow/utils/: logging.py  sqlite_exec.py
